--- a/src/input.css
+++ b/src/input.css
@@ -32,16 +32,22 @@ body {
   0% {
     transform: rotate(0deg);
   }
+  25% {
+    transform: rotate(-10deg);
+  }
   50% {
-    transform: rotate(-7deg);
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(7deg);
   }
   100% {
-    transform: rotate(5deg);
+    transform: rotate(0deg);
   }
 }
 
 .head-sway {
-  animation: sway-left-right 2s ease-in-out infinite alternate;
+  animation: sway-left-right 2s linear infinite;
 
   transform-origin: center 80%;
 }
