--- a/src/output.css
+++ b/src/output.css
@@ -275,7 +275,6 @@
     --spacing-8xl: 90rem;
     --leading-9: 36px;
     --leading-6: 24px;
-    --leading-5: 20px;
     --radius-base: 12px;
     --color-body: var(--color-gray-600);
     --color-body-subtle: var(--color-gray-500);
@@ -920,26 +919,11 @@
       max-width: 96rem;
     }
   }
-  .ms-1 {
-    margin-inline-start: calc(var(--spacing) * 1);
-  }
-  .ms-1\.5 {
-    margin-inline-start: calc(var(--spacing) * 1.5);
-  }
-  .-me-0 {
-    margin-inline-end: calc(var(--spacing) * -0);
-  }
-  .-me-0\.5 {
-    margin-inline-end: calc(var(--spacing) * -0.5);
-  }
-  .me-1 {
-    margin-inline-end: calc(var(--spacing) * 1);
+  .m-10 {
+    margin: calc(var(--spacing) * 10);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
-  }
-  .mt-3 {
-    margin-top: calc(var(--spacing) * 3);
   }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
@@ -1228,9 +1212,6 @@
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
-  .mb-6 {
-    margin-bottom: calc(var(--spacing) * 6);
-  }
   .apexcharts-xaxistooltip {
     .apexcharts-canvas & {
       color: var(--color-body) !important;
@@ -1264,9 +1245,6 @@
   }
   .ml-auto {
     margin-left: auto;
-  }
-  .box-border {
-    box-sizing: border-box;
   }
   .datatable-pagination-list-item-link {
     .datatable-wrapper .datatable-bottom .datatable-pagination & {
@@ -1337,9 +1315,6 @@
   }
   .table {
     display: table;
-  }
-  .h-3 {
-    height: calc(var(--spacing) * 3);
   }
   .h-4 {
     height: calc(var(--spacing) * 4);
@@ -1436,14 +1411,14 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
+  }
+  .w-52 {
+    width: calc(var(--spacing) * 52);
   }
   .w-64 {
     width: calc(var(--spacing) * 64);
@@ -1456,9 +1431,6 @@
   }
   .max-w-2xl {
     max-width: var(--container-2xl);
-  }
-  .max-w-sm {
-    max-width: var(--container-sm);
   }
   .datatable-input {
     .datatable-wrapper .datatable-search & {
@@ -1504,6 +1476,9 @@
   }
   .flex-1 {
     flex: 1;
+  }
+  .flex-4 {
+    flex: 4;
   }
   .flex-shrink {
     flex-shrink: 1;
@@ -1552,9 +1527,6 @@
   .resize {
     resize: both;
   }
-  .grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
   .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -1563,6 +1535,9 @@
   }
   .flex-col {
     flex-direction: column;
+  }
+  .flex-wrap {
+    flex-wrap: wrap;
   }
   .items-center {
     align-items: center;
@@ -1584,6 +1559,9 @@
   }
   .justify-start {
     justify-content: flex-start;
+  }
+  .gap-0 {
+    gap: calc(var(--spacing) * 0);
   }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
@@ -1636,9 +1614,6 @@
   .rounded-lg {
     border-radius: var(--radius-lg);
   }
-  .rounded-sm {
-    border-radius: var(--radius-sm);
-  }
   .rounded-s-base {
     border-start-start-radius: var(--radius-base);
     border-end-start-radius: var(--radius-base);
@@ -1650,10 +1625,6 @@
   .rounded-t {
     border-top-left-radius: var(--radius);
     border-top-right-radius: var(--radius);
-  }
-  .rounded-t-base {
-    border-top-left-radius: var(--radius-base);
-    border-top-right-radius: var(--radius-base);
   }
   .rounded-b {
     border-bottom-right-radius: var(--radius);
@@ -1726,12 +1697,6 @@
   .border-brand {
     border-color: var(--color-brand);
   }
-  .border-brand-subtle {
-    border-color: var(--color-brand-subtle);
-  }
-  .border-default {
-    border-color: var(--color-default);
-  }
   .border-default-medium {
     border-color: var(--color-default-medium);
   }
@@ -1781,9 +1746,6 @@
   .bg-brand {
     background-color: var(--color-brand);
   }
-  .bg-brand-softer {
-    background-color: var(--color-brand-softer);
-  }
   .bg-dark-backdrop {
     background-color: var(--color-dark-backdrop);
   }
@@ -1810,9 +1772,6 @@
   }
   .bg-neutral-primary-medium {
     background-color: var(--color-neutral-primary-medium);
-  }
-  .bg-neutral-primary-soft {
-    background-color: var(--color-neutral-primary-soft);
   }
   .bg-neutral-secondary-medium {
     background-color: var(--color-neutral-secondary-medium);
@@ -1844,9 +1803,6 @@
   }
   .bg-\[url\(\'\.\.\/img\/assets\/bg1\.png\'\)\] {
     background-image: url('../img/assets/bg1.png');
-  }
-  .bg-\[url\(\'\.\.\/img\/section2\.jpg\'\)\] {
-    background-image: url('../img/section2.jpg');
   }
   .bg-cover {
     background-size: cover;
@@ -1944,26 +1900,14 @@
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
-  .px-1 {
-    padding-inline: calc(var(--spacing) * 1);
-  }
-  .px-1\.5 {
-    padding-inline: calc(var(--spacing) * 1.5);
-  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
-  }
-  .px-4 {
-    padding-inline: calc(var(--spacing) * 4);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
   }
-  .py-0 {
-    padding-block: calc(var(--spacing) * 0);
-  }
-  .py-0\.5 {
-    padding-block: calc(var(--spacing) * 0.5);
+  .px-10 {
+    padding-inline: calc(var(--spacing) * 10);
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -1974,8 +1918,17 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
+  }
+  .py-20 {
+    padding-block: calc(var(--spacing) * 20);
+  }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
+  }
+  .pt-10 {
+    padding-top: calc(var(--spacing) * 10);
   }
   .search-filtering-row {
     .datatable-wrapper .datatable-container thead tr& th {
@@ -2030,10 +1983,6 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
-  .text-xs {
-    font-size: var(--text-xs);
-    line-height: var(--tw-leading, var(--text-xs--line-height));
-  }
   .apexcharts-datalabels {
     .apexcharts-canvas & .apexcharts-text.apexcharts-pie-label {
       font-size: 0.75rem,[object Object] !important;
@@ -2080,10 +2029,6 @@
       font-size: 0.875rem;
     }
   }
-  .leading-5 {
-    --tw-leading: var(--leading-5);
-    line-height: var(--leading-5);
-  }
   .leading-6 {
     --tw-leading: var(--leading-6);
     line-height: var(--leading-6);
@@ -2107,10 +2052,6 @@
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
-  }
-  .tracking-tight {
-    --tw-tracking: var(--tracking-tight);
-    letter-spacing: var(--tracking-tight);
   }
   .datatable-sorter {
     .datatable-wrapper .datatable-table thead th & {
@@ -2141,9 +2082,6 @@
   }
   .text-fg-brand {
     color: var(--color-fg-brand);
-  }
-  .text-fg-brand-strong {
-    color: var(--color-fg-brand-strong);
   }
   .text-fg-disabled {
     color: var(--color-fg-disabled);
@@ -2181,10 +2119,6 @@
   }
   .shadow-sm {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-xs {
-    --tw-shadow: 0 1px 2px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.05));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .outline {
@@ -2329,6 +2263,78 @@
       outline-style: none;
     }
   }
+  .max-lg\:order-1 {
+    @media (width < 64rem) {
+      order: 1;
+    }
+  }
+  .max-lg\:order-2 {
+    @media (width < 64rem) {
+      order: 2;
+    }
+  }
+  .max-lg\:block {
+    @media (width < 64rem) {
+      display: block;
+    }
+  }
+  .max-lg\:flex {
+    @media (width < 64rem) {
+      display: flex;
+    }
+  }
+  .max-lg\:h-full {
+    @media (width < 64rem) {
+      height: 100%;
+    }
+  }
+  .max-lg\:w-full {
+    @media (width < 64rem) {
+      width: 100%;
+    }
+  }
+  .max-lg\:grid-cols-1 {
+    @media (width < 64rem) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
+  .max-lg\:flex-col {
+    @media (width < 64rem) {
+      flex-direction: column;
+    }
+  }
+  .max-lg\:justify-center {
+    @media (width < 64rem) {
+      justify-content: center;
+    }
+  }
+  .max-lg\:p-10 {
+    @media (width < 64rem) {
+      padding: calc(var(--spacing) * 10);
+    }
+  }
+  .max-lg\:p-16 {
+    @media (width < 64rem) {
+      padding: calc(var(--spacing) * 16);
+    }
+  }
+  .max-lg\:pt-0 {
+    @media (width < 64rem) {
+      padding-top: calc(var(--spacing) * 0);
+    }
+  }
+  .max-lg\:text-2xl {
+    @media (width < 64rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
+  .max-lg\:text-3xl {
+    @media (width < 64rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
+    }
+  }
   .max-md\:top-20 {
     @media (width < 48rem) {
       top: calc(var(--spacing) * 20);
@@ -2369,9 +2375,19 @@
       width: calc(1/2 * 100%);
     }
   }
+  .max-md\:w-1\/4 {
+    @media (width < 48rem) {
+      width: calc(1/4 * 100%);
+    }
+  }
   .max-md\:w-28 {
     @media (width < 48rem) {
       width: calc(var(--spacing) * 28);
+    }
+  }
+  .max-md\:w-32 {
+    @media (width < 48rem) {
+      width: calc(var(--spacing) * 32);
     }
   }
   .max-md\:w-36 {
@@ -2404,6 +2420,11 @@
       flex-direction: column;
     }
   }
+  .max-md\:flex-wrap {
+    @media (width < 48rem) {
+      flex-wrap: wrap;
+    }
+  }
   .max-md\:items-center {
     @media (width < 48rem) {
       align-items: center;
@@ -2412,6 +2433,11 @@
   .max-md\:justify-center {
     @media (width < 48rem) {
       justify-content: center;
+    }
+  }
+  .max-md\:gap-5 {
+    @media (width < 48rem) {
+      gap: calc(var(--spacing) * 5);
     }
   }
   .max-md\:p-10 {
@@ -2427,6 +2453,12 @@
   .max-md\:pt-0 {
     @media (width < 48rem) {
       padding-top: calc(var(--spacing) * 0);
+    }
+  }
+  .max-md\:text-2xl {
+    @media (width < 48rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
   .max-md\:text-3xl {
@@ -2481,6 +2513,11 @@
       width: calc(var(--spacing) * 48);
     }
   }
+  .md\:w-52 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 52);
+    }
+  }
   .md\:w-72 {
     @media (width >= 48rem) {
       width: calc(var(--spacing) * 72);
@@ -2496,14 +2533,29 @@
       width: calc(var(--spacing) * 96);
     }
   }
+  .md\:w-\[15\%\] {
+    @media (width >= 48rem) {
+      width: 15%;
+    }
+  }
   .md\:w-\[25\%\] {
     @media (width >= 48rem) {
       width: 25%;
     }
   }
+  .md\:w-\[30\%\] {
+    @media (width >= 48rem) {
+      width: 30%;
+    }
+  }
   .md\:grid-cols-2 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .md\:gap-10 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 10);
     }
   }
   .md\:bg-\[url\(\'\.\.\/img\/section1\.jpg\'\)\] {
@@ -2531,6 +2583,12 @@
       padding: calc(var(--spacing) * 10);
     }
   }
+  .md\:text-2xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
   .md\:text-3xl {
     @media (width >= 48rem) {
       font-size: var(--text-3xl);
@@ -2547,6 +2605,57 @@
     @media (width >= 48rem) {
       font-size: var(--text-7xl);
       line-height: var(--tw-leading, var(--text-7xl--line-height));
+    }
+  }
+  .lg\:hidden {
+    @media (width >= 64rem) {
+      display: none;
+    }
+  }
+  .lg\:h-screen {
+    @media (width >= 64rem) {
+      height: 100vh;
+    }
+  }
+  .lg\:w-\[15\%\] {
+    @media (width >= 64rem) {
+      width: 15%;
+    }
+  }
+  .lg\:grid-cols-2 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .lg\:bg-\[url\(\'\.\.\/img\/section1\.jpg\'\)\] {
+    @media (width >= 64rem) {
+      background-image: url('../img/section1.jpg');
+    }
+  }
+  .lg\:bg-\[url\(\'\.\.\/img\/section2\.jpg\'\)\] {
+    @media (width >= 64rem) {
+      background-image: url('../img/section2.jpg');
+    }
+  }
+  .lg\:bg-cover {
+    @media (width >= 64rem) {
+      background-size: cover;
+    }
+  }
+  .lg\:bg-center {
+    @media (width >= 64rem) {
+      background-position: center;
+    }
+  }
+  .lg\:p-10 {
+    @media (width >= 64rem) {
+      padding: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:text-5xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
     }
   }
   .rtl\:rotate-180 {
@@ -2775,15 +2884,21 @@ body {
   0% {
     transform: rotate(0deg);
   }
+  25% {
+    transform: rotate(-10deg);
+  }
   50% {
-    transform: rotate(-7deg);
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(7deg);
   }
   100% {
-    transform: rotate(5deg);
+    transform: rotate(0deg);
   }
 }
 .head-sway {
-  animation: sway-left-right 2s ease-in-out infinite alternate;
+  animation: sway-left-right 2s linear infinite;
   transform-origin: center 80%;
 }
 @layer base {
@@ -3276,10 +3391,6 @@ body {
   syntax: "*";
   inherits: false;
 }
-@property --tw-tracking {
-  syntax: "*";
-  inherits: false;
-}
 @property --tw-shadow {
   syntax: "*";
   inherits: false;
@@ -3433,7 +3544,6 @@ body {
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
-      --tw-tracking: initial;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
