--- a/src/output.css
+++ b/src/output.css
@@ -2488,6 +2488,41 @@
       bottom: calc(var(--spacing) * 7);
     }
   }
+  .md\:bottom-10 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:bottom-15 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 15);
+    }
+  }
+  .md\:bottom-20 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:bottom-21 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 21);
+    }
+  }
+  .md\:bottom-22 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 22);
+    }
+  }
+  .md\:bottom-25 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 25);
+    }
+  }
+  .md\:bottom-26 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 26);
+    }
+  }
   .md\:left-10 {
     @media (width >= 48rem) {
       left: calc(var(--spacing) * 10);
