--- a/src/output.css
+++ b/src/output.css
@@ -2435,6 +2435,11 @@
       justify-content: center;
     }
   }
+  .max-md\:gap-0 {
+    @media (width < 48rem) {
+      gap: calc(var(--spacing) * 0);
+    }
+  }
   .max-md\:gap-5 {
     @media (width < 48rem) {
       gap: calc(var(--spacing) * 5);
