--- a/src/input.css
+++ b/src/input.css
@@ -51,3 +51,19 @@ body {
 
   transform-origin: center 80%;
 }
+
+@keyframes sway {
+  0% {
+    transform: translateX(-20px) rotate(80deg);
+  }
+  50% {
+    transform: translateX(20px) rotate(5deg);
+  }
+  100% {
+    transform: translateX(-20px) rotate(80deg);
+  }
+}
+
+.bear-sway {
+  animation: sway 5s ease-in-out infinite;
+}
